<resources>
    <string name="app_name" translatable="false">HabitsTracker</string>

    <string name="every_day">every day</string>
    <string name="every_week">every week</string>
    <string name="every_month">every month</string>
    <string name="every_year">every year</string>
    <string name="divider" translatable="false">|</string>

    <string name="header_new_habit">New habit</string>
    <string name="header_edit_habit">Edit habit</string>

    <string name="habit_button_add">Add</string>
    <string name="habit_button_save">Save</string>

    <string name="habit_priority_high">High</string>
    <string name="habit_priority_medium">Medium</string>
    <string name="habit_priority_low">Low</string>

    <string name="habit_type_good">Good</string>
    <string name="habit_type_bad">Bad</string>
    <string name="habit_input_hint_name">Name</string>
    <string name="habit_input_hint_description">Description</string>

    <string name="times">times</string>
    <string name="count">Count</string>
    <string name="priority">Priority</string>
    <string name="interval">Interval</string>
    <string name="habit_type">Habit type</string>

    <string name="error_fill_this_field">You must fill this field.</string>
    <string name="error_make_a_choice">You must make a choice here.</string>
    <string name="selected_color">Selected color</string>
    <string name="header_habits">Habits</string>
    <string name="header_priority">Priority</string>
    <string name="rgb" translatable="false">RGB:</string>
    <string name="hsv" translatable="false">HSV:</string>
    <string name="habits">Habits</string>
    <string name="app_info">About the app</string>

    <plurals name="plurals_frequency_times">
        <item quantity="one">%d time</item>
        <item quantity="two">%d times</item>
        <item quantity="few">%d times</item>
        <item quantity="many">%d times</item>
        <item quantity="other">%d times</item>
    </plurals>

    <string name="view_pager_good_habits_header">Good</string>
    <string name="view_pager_bad_habits_header">Bad</string>

    <string name="search">Search</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_priority">Priority</string>
    <string name="sort_by_color">Color</string>
    <string name="sort_by_frequency">Frequency</string>
    <string name="bottom_sheet_label">Search and filters</string>

    <string name="habit_goal_is_achived">Your goal is achieved!</string>

    <plurals name="habit_good_toast_less_than_goal">
        <item quantity="one">You need to do one more time</item>
        <item quantity="few">You need to do it %d more times</item>
        <item quantity="many">You need to do it %d more times</item>
        <item quantity="other">You need to do it %d more times</item>
    </plurals>

    <string name="habit_good_toast_more_than_goal" translatable="false">You\'re breathtaking</string>

    <plurals name="habit_bad_toast_less_than_goal">
        <item quantity="one">You can only do it one more time</item>
        <item quantity="few">You can do it %d more times</item>
        <item quantity="many">You can do it %d more times</item>
        <item quantity="other">You can do it %d more times</item>
    </plurals>

    <string name="habit_bad_toast_more_than_goal">Stop it!</string>
    <string name="button_done_text">Done</string>
    <string name="dialog_delete_habit_message">Delete habit?</string>
    <string name="dialog_delete_habit_positive_button">Delete</string>
    <string name="dialog_delete_habit_negative_button">Cancel</string>

</resources>