<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottom_sheet"
    android:paddingHorizontal="16dp"
    android:paddingTop="60dp"
    android:paddingBottom="25dp"
    tools:context=".presentation.home.BottomSheetFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search"
        app:startIconDrawable="@drawable/ic_search"
        app:boxBackgroundColor="@color/purple_50"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewSortBy"
        android:text="@string/sort_by"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutSearch" />

    <ImageButton
        android:id="@+id/imageButtonSortByDescending"
        android:src="@drawable/ic_arrow_sort_by_descending"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewSortBy"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSortBy" />

    <ImageButton
        android:id="@+id/imageButtonSortByAscending"
        android:src="@drawable/ic_arrow_sort_by_ascending"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintRight_toLeftOf="@+id/imageButtonSortByDescending"
        app:layout_constraintTop_toTopOf="@+id/textViewSortBy"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSortBy" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupSortByField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:singleSelection="true"
        app:layout_constraintTop_toBottomOf="@+id/textViewSortBy"
        app:layout_constraintLeft_toLeftOf="parent" >

        <com.google.android.material.chip.Chip
            android:id="@+id/chipName"
            android:text="@string/sort_by_name"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipPriority"
            android:text="@string/sort_by_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipColor"
            android:text="@string/sort_by_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFrequency"
            android:text="@string/sort_by_frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice" />

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>