<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.habitstracker.presentation.home.habiteditor.HabitEditorViewModel" />

        <import type="com.example.habitstracker.utils.Converter" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:clipToPadding="false"
        android:clipChildren="false"
        tools:context=".presentation.home.habiteditor.HabitEditorFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:clipChildren="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/habit_input_hint_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@={viewModel.name}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/habit_input_hint_description"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="3"
                        android:text="@={viewModel.description}"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutPriority"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/priority"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:id="@+id/editTextPriority"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayoutTimesCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:hint="@string/count"
                        app:errorIconDrawable="@null"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextTimesCount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:text="@={Converter.getInstance().fromIntToString(viewModel.frequencyTimes)}"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:text="@string/times"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayoutInterval"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:hint="@string/interval"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                        <AutoCompleteTextView
                            android:id="@+id/editTextInterval"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/habit_type"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <RadioGroup
                        android:id="@+id/radioGroupHabitType"
                        android:paddingVertical="10dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radioButtonGoodHabit"
                            android:text="@string/habit_type_good"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"/>

                        <RadioButton
                            android:id="@+id/radioButtonBadHabit"
                            android:text="@string/habit_type_bad"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </RadioGroup>

                    <TextView
                        android:id="@+id/radioGroupError"
                        android:textAppearance="?attr/textAppearanceCaption"
                        android:textColor="?attr/colorError"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/selected_color"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:layout_marginEnd="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"/>

                    <ImageView
                        android:id="@+id/selectedHabitColor"
                        android:src="@drawable/ic_habit_color_square"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"/>

                    <TextView
                        android:id="@+id/selectedHabitColorError"
                        android:textAppearance="?attr/textAppearanceCaption"
                        android:textColor="?attr/colorError"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:visibility="gone"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp">

                    <TextView
                        android:text="@string/rgb"
                        android:textAppearance="?attr/textAppearanceSubtitle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/selectedHabitColorRGB"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp">

                    <TextView
                        android:text="@string/hsv"
                        android:textAppearance="?attr/textAppearanceSubtitle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/selectedHabitColorHSV"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <HorizontalScrollView
                    android:id="@+id/colorScrollView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="-10dp"
                    android:scrollbars="none">

                    <LinearLayout
                        android:id="@+id/habitsColorLinearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" />

                </HorizontalScrollView>

            </LinearLayout>

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmHabitButton"
            tools:text="save"
            android:textSize="18sp"
            android:minWidth="180dp"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center|bottom"
            android:textAlignment="center"
            app:iconGravity="textStart"
            app:cornerRadius="24dp" />

    </LinearLayout>

</layout>